# projeto_basico_streamlit

./: Cadastro.py  clientes.csv  pyproject.toml
